--- a/mLingo/ClientApp/src/schema/styles/variables.scss
+++ b/mLingo/ClientApp/src/schema/styles/variables.scss
@@ -126,6 +126,14 @@ a:hover, a:focus, a:checked{
   @include inbutton(inherit);
 }
 
+input.text{
+  border: 1px solid #B2B2B2;
+  border-radius: 10px;
+  font-size: 14px;
+  padding: 10px 10px;
+}
+
+
 @keyframes navbar-monkey-bounce {
   0% {
     bottom: 10%;
