--- a/mLingo/ClientApp/src/styles/css/Main.css
+++ b/mLingo/ClientApp/src/styles/css/Main.css
@@ -89,6 +89,13 @@ a:hover, a:focus, a:checked {
   }
 }
 
+input.text {
+  border: 1px solid #B2B2B2;
+  border-radius: 10px;
+  font-size: 14px;
+  padding: 10px 10px;
+}
+
 @-webkit-keyframes navbar-monkey-bounce {
   0% {
     bottom: 10%;
@@ -170,6 +177,7 @@ a:hover, a:focus, a:checked {
 /* 3.4 Slider.js */
 /* 3.5 UserPromo.js */
 /* 3.6 WelcomeSection.js */
+/* 3.7 Newsletter */
 /* Layout Components */
 /* 4.1 AppNavbar.js */
 /* 4.2 Footer.js */
@@ -661,6 +669,57 @@ div.welcome-section > div p {
   div.welcome-section > div p {
     font-size: 10px;
   }
+}
+
+/* 3.7 Newsletter */
+#newsletter-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  color: #000536;
+}
+
+#newsletter-section h2 {
+  font-weight: bold;
+  font-size: 28px;
+}
+
+#newsletter-section p {
+  margin: 0 !important;
+}
+
+#newsletter-section input {
+  width: 200px;
+  margin: 20px 0;
+}
+
+#newsletter-section .left-circle, #newsletter-section .right-circle {
+  -webkit-transform: scale(0.8);
+          transform: scale(0.8);
+  position: absolute;
+  top: -30%;
+}
+
+#newsletter-section .left-circle {
+  left: -30%;
+}
+
+#newsletter-section .right-circle {
+  right: -30%;
+}
+
+#newsletter-section .newsletter-subscribe {
+  padding: 200px 0;
+  text-align: center;
 }
 
 /* Layout Components */
