--- a/mLingo/ClientApp/src/styles/css/variables.css
+++ b/mLingo/ClientApp/src/styles/css/variables.css
@@ -89,6 +89,13 @@ a:hover, a:focus, a:checked {
   }
 }
 
+input.text {
+  border: 1px solid #B2B2B2;
+  border-radius: 10px;
+  font-size: 14px;
+  padding: 10px 10px;
+}
+
 @-webkit-keyframes navbar-monkey-bounce {
   0% {
     bottom: 10%;
