--- a/mLingo/ClientApp/src/schema/styles/Main.scss
+++ b/mLingo/ClientApp/src/schema/styles/Main.scss
@@ -24,6 +24,7 @@
 /* 3.5 UserPromo.js */
 /* 3.6 WelcomeSection.js */
 /* 3.7 Newsletter */
+/* 3.8 Steps.js & Step.js */
 
 /* Layout Components */
 /* 4.1 AppNavbar.js */
@@ -581,6 +582,29 @@ div.welcome-section{
     text-align:center;
   }
 }
+
+//////////////////////////////////////////////////////
+/* 3.8 Steps.js & Step.js */
+//////////////////////////////////////////////////////
+
+#Steps{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#Steps-container{
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  align-items: center;
+}
+
+#Step{
+  display: flex;
+  flex-wrap: wrap;
+}
+
 
 //////////////////////////////////////////////////////
 /* Layout Components */
