--- a/mLingo/ClientApp/src/styles/css/Main.css
+++ b/mLingo/ClientApp/src/styles/css/Main.css
@@ -743,6 +743,13 @@ div.welcome-section > div p {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  color: #000536;
+}
+
+#Steps > h2 {
+  font-weight: bold;
+  font-size: 32px;
+  margin: 40px;
 }
 
 #Steps-container {
@@ -758,12 +765,30 @@ div.welcome-section > div p {
           align-items: center;
 }
 
-#Step {
+.Step {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.Step img {
+  -webkit-transform: scale(0.8);
+          transform: scale(0.8);
+}
+
+.Step h2 {
+  font-weight: bold;
+}
+
+.Step div {
+  margin: 0 20px;
 }
 
 /* Layout Components */
