--- a/mLingo/ClientApp/src/styles/css/Main.css
+++ b/mLingo/ClientApp/src/styles/css/Main.css
@@ -580,12 +580,8 @@ li.media h4 {
 
 /* 3.6 WelcomeSection.js */
 div.welcome-section {
+  position: relative;
   width: 100%;
-  background: url("../../img/landpage1.png") no-repeat center center;
-  background-size: 100% 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  min-height: 494px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -597,7 +593,17 @@ div.welcome-section {
           align-items: center;
 }
 
+div.welcome-section img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 div.welcome-section > div {
+  z-index: 1;
   max-width: 50%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -634,9 +640,15 @@ div.welcome-section > div p {
   }
 }
 
+@media (min-width: 991px) {
+  div.welcome-section {
+    min-height: 494px;
+  }
+}
+
 @media (max-width: 991px) {
   div.welcome-section {
-    min-height: 371px;
+    height: 371px;
   }
   div.welcome-section > div h2 {
     font-size: 22px;
@@ -648,7 +660,7 @@ div.welcome-section > div p {
 
 @media (max-width: 576px) {
   div.welcome-section {
-    min-height: 297px;
+    height: 297px;
   }
   div.welcome-section > div {
     padding-right: 0px;
@@ -663,7 +675,7 @@ div.welcome-section > div p {
 
 @media (max-width: 415px) {
   div.welcome-section {
-    max-height: 214px;
+    height: 214px;
   }
   div.welcome-section > div {
     padding-right: 0px;
@@ -837,10 +849,14 @@ div.welcome-section > div p {
     font-size: 14px !important;
   }
   .navbar--dark {
-    padding: 15px 5px;
+    padding: 10px 5px;
   }
   .navbar__buttons {
     width: 70%;
+  }
+  .navbar__brand {
+    -webkit-transform: scale(0.8);
+            transform: scale(0.8);
   }
 }
 
