--- a/mLingo/ClientApp/src/styles/css/Main.css
+++ b/mLingo/ClientApp/src/styles/css/Main.css
@@ -195,6 +195,8 @@ input.text:hover, input.text:focus, input.text:active, input.text:checked {
 /* 6.1 SearchInput.js */
 /* UserBase Components */
 /* 7.1 UserSection.js */
+/* 7.2 StudySetsSection.js */
+/* 7.3 CollectionSection */
 /* layouts */
 /* 8.1 Layout.js */
 /* Components */
@@ -1275,8 +1277,9 @@ input[name=collectionName] {
   margin: 0px 0px 120px 0px;
 }
 
-/* 7.1.2 StudySetsSection.js */
-.yourcollections {
+/* 7.2 StudySetsSection.js */
+/* 7.3 CollectionSection.js */
+.yourcollections, .yourstudysets {
   padding: 50px 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1293,27 +1296,28 @@ input[name=collectionName] {
   /* Optional: show position indicator in red */
 }
 
-.yourcollections::-webkit-scrollbar {
+.yourcollections::-webkit-scrollbar, .yourstudysets::-webkit-scrollbar {
   width: 0px;
   /* Remove scrollbar space */
   background: transparent;
   /* Optional: just make scrollbar invisible */
 }
 
-.yourcollections::-webkit-scrollbar-thumb {
+.yourcollections::-webkit-scrollbar-thumb, .yourstudysets::-webkit-scrollbar-thumb {
   background: transparent;
 }
 
-.yourcollections div.card {
+.yourcollections div.card, .yourstudysets div.card {
   width: 150px;
   height: 150px;
   margin: 0 55px 0 0;
-  background: url("../../img/studyset.png");
+  background: url("../../img/collection.svg");
+  background-size: cover;
   border-radius: 25px;
   border: 0;
 }
 
-.yourcollections div.card div.card-body {
+.yourcollections div.card div.card-body, .yourstudysets div.card div.card-body {
   padding: 25px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1330,15 +1334,15 @@ input[name=collectionName] {
           align-items: flex-end;
 }
 
-.yourcollections h5, h6 {
+.yourcollections h5, .yourcollections h6, .yourstudysets h5, .yourstudysets h6 {
   color: #000536;
 }
 
-.yourcollections h5 {
+.yourcollections h5, .yourstudysets h5 {
   font-weight: 900;
 }
 
-.yourcollections button {
+.yourcollections button, .yourstudysets buttton {
   min-width: 200px;
   max-height: 60px;
 }
@@ -1358,6 +1362,10 @@ input[name=collectionName] {
 .plus-button:hover {
   color: #000536;
   background-color: #A1D218;
+}
+
+.yourstudysets div.card {
+  background: url("../../img/studyset.png");
 }
 
 /* layouts */
