--- a/mLingo/ClientApp/src/schema/styles/Main.scss
+++ b/mLingo/ClientApp/src/schema/styles/Main.scss
@@ -48,6 +48,10 @@
 /* 8.1 Layout.js */
 
 
+/* Animations */
+/* 9.1 Loading.js */
+
+
 //////////////////////////////////////////////////////
 /* Components */
 //////////////////////////////////////////////////////
@@ -1196,6 +1200,91 @@ main.user--container{
 }
 
 
+//////////////////////////////////////////////////////////////////
+/* 9.1 Loading.js */
+//////////////////////////////////////////////////////////////////
+
+
+.loader{
+  width: 50px;
+  height: 50px;
+  top:50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(45deg);
+  position: absolute;
+}
+.introLoader{
+  animation: animate 1s linear infinite;
+}
+.loader span{
+  position: absolute;
+  width: 25px;
+  height: 25px;
+}
+.introSpan{
+  animation: rotate 2s ease-in-out infinite;
+}
+.loader span:nth-child(1){
+  background-color: $dark-blue;
+  top: 0;
+  left: 0;
+}
+.loader span:nth-child(2){
+  background-color: $dark-green;
+  top: 0;
+  right: 0;
+}
+.loader span:nth-child(3){
+  background-color: $dark-green;
+  bottom: 0;
+  left: 0;
+}
+.loader span:nth-child(4){
+  background-color: $dark-blue;
+  bottom: 0;
+  right: 0;
+}
+
+@keyframes animate{
+  0%{
+    width: 50px;
+    height: 50px;
+  }
+   10%{
+    width: 50px;
+    height: 50px;
+  }
+   50%{
+    width: 75px;
+    height: 75px;
+  }
+  90%{
+    width: 50px;
+    height: 50px;
+  }
+   100%{
+    width: 50px;
+    height: 50px;
+  }
+}
+
+@keyframes rotate{
+  0%{
+    transform: rotate(0deg);
+  }
+  10%{
+    transform: rotate(0deg);
+  }
+  50%{
+    transform: rotate(90deg);
+  }
+  90%{
+    transform: rotate(0deg);
+  }
+  100%{
+    transform: rotate(0deg);
+  }
+}
 
 
 //////////////////////////////////////////////////////////////////
@@ -1205,3 +1294,5 @@ main.user--container{
 .searchcollectioninput{
   margin: 20px;
 }
+
+
