fix problem with creating collections

--- a/mLingo/ClientApp/src/schema/styles/variables.scss
+++ b/mLingo/ClientApp/src/schema/styles/variables.scss
@@ -138,6 +138,17 @@ input.text{
   }
 }
 
+input[type='text'],textarea{
+  &:hover, &:focus, &:active, &:checked {
+    text-decoration: none !important;
+    outline: none;
+  }
+}
+
+.color-dark-blue{
+  color: $dark-blue !important;
+}
+
 
 @keyframes navbar-monkey-bounce {
   0% {
