--- a/mLingo/ClientApp/src/styles/css/variables.css
+++ b/mLingo/ClientApp/src/styles/css/variables.css
@@ -101,6 +101,15 @@ input.text:hover, input.text:focus, input.text:active, input.text:checked {
   outline: none;
 }
 
+input[type='text']:hover, input[type='text']:focus, input[type='text']:active, input[type='text']:checked, textarea:hover, textarea:focus, textarea:active, textarea:checked {
+  text-decoration: none !important;
+  outline: none;
+}
+
+.color-dark-blue {
+  color: #000536 !important;
+}
+
 @-webkit-keyframes navbar-monkey-bounce {
   0% {
     bottom: 10%;
