--- a/mLingo/ClientApp/src/schema/styles/variables.scss
+++ b/mLingo/ClientApp/src/schema/styles/variables.scss
@@ -97,7 +97,8 @@ a:hover, a:focus, a:checked{
 
   @media(max-width: $mobile-res){
     &{
-      font-size: 16px !important;
+      font-size: 12px !important;
+      padding: 5px 3px;
     }
   }
 }
