--- a/mLingo/ClientApp/src/styles/css/variables.css
+++ b/mLingo/ClientApp/src/styles/css/variables.css
@@ -28,7 +28,8 @@ a:hover, a:focus, a:checked {
 
 @media (max-width: 576px) {
   .green-button {
-    font-size: 16px !important;
+    font-size: 12px !important;
+    padding: 5px 3px;
   }
 }
 
