--- a/mLingo/ClientApp/src/styles/css/Main.css
+++ b/mLingo/ClientApp/src/styles/css/Main.css
@@ -194,6 +194,7 @@ input[type='text']:hover, input[type='text']:focus, input[type='text']:active, i
 /* 3.6 WelcomeSection.js */
 /* 3.7 Newsletter */
 /* 3.8 Steps.js & Step.js */
+/* 3.9 Opinions.js & Opinion.js */
 /* Layout Components */
 /* 4.1 AppNavbar.js */
 /* 4.2 Footer.js */
@@ -444,6 +445,12 @@ input[type='text']:hover, input[type='text']:focus, input[type='text']:active, i
 }
 
 /* LandPage Components */
+.main-page-h2 {
+  color: #000536;
+  font-size: 36px;
+  font-weight: bold;
+}
+
 /* 3.1 Formular.js */
 /* 3.2 Promo.js */
 .help-others {
@@ -636,10 +643,7 @@ div.welcome-section > div {
 }
 
 div.welcome-section > div h2 {
-  font-size: 32px;
   text-align: left;
-  font-weight: bold;
-  color: #000536;
 }
 
 div.welcome-section > div p {
@@ -719,11 +723,6 @@ div.welcome-section > div p {
   color: #000536;
 }
 
-#newsletter-section h2 {
-  font-weight: bold;
-  font-size: 32px;
-}
-
 #newsletter-section p {
   font-size: 18px;
   margin: 0 !important;
@@ -792,11 +791,6 @@ div.welcome-section > div p {
           align-items: center;
   color: #000536;
   padding-top: 0px !important;
-}
-
-#Steps > h2 {
-  font-weight: bold;
-  font-size: 34px;
 }
 
 #Steps > h2::before {
@@ -880,6 +874,51 @@ div.welcome-section > div p {
   .Step img {
     margin-bottom: 20px;
   }
+}
+
+/* 3.9 Opinions.js & Opinion.js */
+#Opinions h2 {
+  text-align: center;
+  margin-bottom: 10vh;
+}
+
+.Opinion {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+}
+
+.Opinion img {
+  width: 130px;
+  height: 130px;
+  border-radius: 100%;
+}
+
+.Opinion::before {
+  content: url("../../img/bubbles-newsletter-01.svg");
+  -webkit-transform: scale(0.8);
+          transform: scale(0.8);
+  position: absolute;
+  top: -50%;
+  left: -10%;
+}
+
+.Opinion::after {
+  content: url("../../img/bubbles-newsletter-02.svg");
+  -webkit-transform: scale(0.8);
+          transform: scale(0.8);
+  position: absolute;
+  bottom: -40%;
+  left: 0;
+}
+
+.Opinion p {
+  font-size: 16px;
+  color: #000536;
+  word-spacing: 2px;
 }
 
 /* Layout Components */
