--- a/mLingo/ClientApp/src/styles/css/Main.css
+++ b/mLingo/ClientApp/src/styles/css/Main.css
@@ -748,19 +748,30 @@ div.welcome-section > div p {
 }
 
 #newsletter-section .left-circle-container, #newsletter-section .right-circle-container {
-  position: absolute;
+  position: relative;
   overflow: hidden;
   height: auto;
   width: auto;
-  max-width: 50vw;
+  max-width: 50%;
 }
 
 #newsletter-section .left-circle-container {
-  left: -25%;
+  position: absolute;
+  left: -200px;
 }
 
 #newsletter-section .right-circle-container {
-  right: -25%;
+  position: absolute;
+  right: -200px;
+}
+
+@media (max-width: 576px) {
+  #newsletter-section .right-circle-container {
+    right: -100px;
+  }
+  #newsletter-section .left-circle-container {
+    left: -100px;
+  }
 }
 
 #newsletter-section .newsletter-subscribe {
