--- a/mLingo/ClientApp/src/styles/css/Main.css
+++ b/mLingo/ClientApp/src/styles/css/Main.css
@@ -752,17 +752,16 @@ div.welcome-section > div p {
   overflow: hidden;
   height: auto;
   width: auto;
-  max-width: 50%;
 }
 
 #newsletter-section .left-circle-container {
   position: absolute;
-  left: -200px;
+  left: -20%;
 }
 
 #newsletter-section .right-circle-container {
   position: absolute;
-  right: -200px;
+  right: -20%;
 }
 
 @media (max-width: 576px) {
@@ -843,6 +842,12 @@ div.welcome-section > div p {
   }
 }
 
+@media (min-width: 576px) and (max-width: 991px) {
+  #Steps h2 {
+    font-size: 26px !important;
+  }
+}
+
 .Step {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -876,7 +881,16 @@ div.welcome-section > div p {
   margin: 0 20px;
 }
 
-@media (max-width: 576px) {
+@media (min-width: 1200px) {
+  .Step > div h2 {
+    font-size: 17px;
+  }
+  .Step div {
+    margin: 0 0px;
+  }
+}
+
+@media (max-width: 991px) {
   .Step {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
@@ -891,6 +905,12 @@ div.welcome-section > div p {
 #Opinions h2 {
   text-align: center;
   margin-bottom: 10vh;
+}
+
+@media (max-width: 576px) {
+  #Opinions {
+    padding: 20px;
+  }
 }
 
 .Opinion {
@@ -913,8 +933,8 @@ div.welcome-section > div p {
   -webkit-transform: scale(0.8);
           transform: scale(0.8);
   position: absolute;
-  top: -50%;
-  left: -10%;
+  top: -70px;
+  left: -70px;
 }
 
 .Opinion::after {
@@ -922,7 +942,7 @@ div.welcome-section > div p {
   -webkit-transform: scale(0.8);
           transform: scale(0.8);
   position: absolute;
-  bottom: -40%;
+  bottom: -70px;
   left: 0;
 }
 
@@ -930,6 +950,35 @@ div.welcome-section > div p {
   font-size: 16px;
   color: #000536;
   word-spacing: 2px;
+}
+
+@media (max-width: 991px) {
+  .Opinion {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .Opinion p {
+    margin-top: 20px;
+    font-size: 12px;
+  }
+  .Opinion::before {
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
+    top: -50px;
+    left: -10px;
+  }
+  .Opinion::after {
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
+    bottom: -60px;
+    right: -50px;
+  }
 }
 
 /* Layout Components */
