Implement register newsletter message

--- a/mLingo/ClientApp/src/schema/styles/Main.scss
+++ b/mLingo/ClientApp/src/schema/styles/Main.scss
@@ -602,6 +602,11 @@ div.welcome-section{
     }
   }
 
+  .newsletter-thanks{
+    padding: 20vh 0;
+    text-align: center;
+  }
+
 
 
   .left-circle-container, .right-circle-container{
