--- a/mLingo/ClientApp/src/schema/styles/Main.scss
+++ b/mLingo/ClientApp/src/schema/styles/Main.scss
@@ -1,4 +1,5 @@
 @import "./variables.scss";
+@import "./BEM.scss";
 
 
 /* MENU */
@@ -1280,30 +1281,6 @@ input[name=collectionName]{
     }
 }
 
-.yourcollections div.card, .yourstudysets div.card{
-  width: 150px;
-  height: 150px;
-  margin: 0 55px 0 0 ;
-  background: url('../../img/collection.svg');
-  background-size: cover;
-  border-radius: 25px;
-  border: 0;
-}
-
-.yourcollections div.card div.card-body, .yourstudysets div.card div.card-body {
-  padding: 25px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: flex-end;
-}
-
-.yourcollections h5,.yourcollections h6, .yourstudysets h5, .yourstudysets h6{
-   color: $dark-blue;
-}
-.yourcollections h5, .yourstudysets h5{
-  font-weight: 900;
-}
 .yourcollections button, .yourstudysets button{
   min-width: 200px;
   max-height: 60px;
@@ -1327,10 +1304,6 @@ input[name=collectionName]{
 .plus-button:hover{
   color: $dark-blue;
   background-color: $dark-green;
-}
-
-.yourstudysets div.card{
-  background: url('../../img/studyset.png');
 }
 
 
