--- a/mLingo/ClientApp/src/styles/css/Main.css
+++ b/mLingo/ClientApp/src/styles/css/Main.css
@@ -174,6 +174,214 @@ input[type='text']:hover, input[type='text']:focus, input[type='text']:active, i
           transform: scale(0.99);
 }
 
+* {
+  font-family: 'Poppins', sans-serif;
+}
+
+a:hover, a:focus, a:checked {
+  text-decoration: none;
+}
+
+.green-button {
+  font-size: 16px;
+  font-weight: 400;
+  background-color: inherit;
+  border: 0;
+  color: #000536;
+  outline: none !important;
+  background: #B6EE1A;
+  padding: 10px;
+  border-radius: 10px;
+  text-decoration: none;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.green-button:hover {
+  color: #000536;
+  text-decoration: none !important;
+}
+
+@media (max-width: 576px) {
+  .green-button {
+    font-size: 12px !important;
+    padding: 5px 3px;
+  }
+}
+
+.green-button:active {
+  background: -webkit-gradient(linear, left top, left bottom, from(#A1D218), to(#B6EE1A));
+  background: linear-gradient(#A1D218, #B6EE1A);
+}
+
+.blue-button {
+  font-size: 24px;
+  font-weight: bold;
+  text-shadow: 0.1em 0.1em 0.2em black;
+  background-color: inherit;
+  border: 0;
+  color: white;
+  outline: none !important;
+  background: #000536;
+  height: 60px;
+  border-radius: 5px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.blue-button:hover, .blue-button:focus, .blue-button:active, .blue-button:checked {
+  color: #B6EE1A;
+  text-decoration: none !important;
+}
+
+@media (max-width: 576px) {
+  .blue-button {
+    font-size: 16px !important;
+  }
+}
+
+.in-button {
+  font-size: 24px;
+  font-weight: bold;
+  text-shadow: 0.1em 0.1em 0.2em black;
+  background-color: inherit;
+  border: 0;
+  color: white;
+  outline: none !important;
+  background: inherit;
+  height: 60px;
+  border-radius: 5px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.in-button:hover, .in-button:focus, .in-button:active, .in-button:checked {
+  color: #B6EE1A;
+  text-decoration: none !important;
+}
+
+@media (max-width: 576px) {
+  .in-button {
+    font-size: 16px !important;
+  }
+}
+
+input.text {
+  border: 1px solid #B2B2B2;
+  border-radius: 10px;
+  font-size: 14px;
+  padding: 10px 10px;
+}
+
+input.text:hover, input.text:focus, input.text:active, input.text:checked {
+  text-decoration: none !important;
+  outline: none;
+}
+
+input[type='text']:hover, input[type='text']:focus, input[type='text']:active, input[type='text']:checked, textarea:hover, textarea:focus, textarea:active, textarea:checked {
+  text-decoration: none !important;
+  outline: none;
+}
+
+.color-dark-blue {
+  color: #000536 !important;
+}
+
+@keyframes navbar-monkey-bounce {
+  0% {
+    bottom: 10%;
+  }
+  25% {
+    bottom: 7%;
+  }
+  65% {
+    bottom: 26%;
+  }
+  70% {
+    bottom: 26%;
+  }
+  90% {
+    bottom: 7%;
+  }
+  100% {
+    bottom: 10%;
+  }
+}
+
+.remove-button {
+  font-size: 24px;
+  color: #000536;
+  background-color: #F8F8F8;
+  border: 0;
+}
+
+.remove-button:hover, .remove-button:focus {
+  background: #F8F8F8;
+}
+
+.remove-button:focus {
+  outline: 1px solid #F8F8F8;
+  outline-offset: -4px;
+}
+
+.remove-button:active {
+  -webkit-transform: scale(0.99);
+          transform: scale(0.99);
+}
+
+.card__container {
+  width: 150px;
+  height: 150px;
+  margin: 0 55px 0 0;
+  border-radius: 25px;
+  border: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.card__body {
+  padding: 25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.card--collection {
+  background: url("../../img/collection.svg");
+  background-size: cover;
+}
+
+.card--set {
+  background: url("../../img/studyset.png");
+  background-size: cover;
+}
+
+.card__title, .card__subtitle {
+  color: #000536;
+}
+
+.card__title {
+  font-size: 1.2rem;
+  font-weight: 900;
+}
+
 /* MENU */
 /* Components */
 /* Card Components */
@@ -1495,41 +1703,6 @@ input[name=collectionName] {
   background: transparent;
 }
 
-.yourcollections div.card, .yourstudysets div.card {
-  width: 150px;
-  height: 150px;
-  margin: 0 55px 0 0;
-  background: url("../../img/collection.svg");
-  background-size: cover;
-  border-radius: 25px;
-  border: 0;
-}
-
-.yourcollections div.card div.card-body, .yourstudysets div.card div.card-body {
-  padding: 25px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-}
-
-.yourcollections h5, .yourcollections h6, .yourstudysets h5, .yourstudysets h6 {
-  color: #000536;
-}
-
-.yourcollections h5, .yourstudysets h5 {
-  font-weight: 900;
-}
-
 .yourcollections button, .yourstudysets button {
   min-width: 200px;
   max-height: 60px;
@@ -1555,10 +1728,6 @@ input[name=collectionName] {
 .plus-button:hover {
   color: #000536;
   background-color: #A1D218;
-}
-
-.yourstudysets div.card {
-  background: url("../../img/studyset.png");
 }
 
 /* 7.3 Collectionscontent.js */
