--- a/mLingo/ClientApp/src/schema/styles/BEM.scss
+++ b/mLingo/ClientApp/src/schema/styles/BEM.scss
@@ -1,16 +1,23 @@
 @import './variables.scss';
-// Rebuild SCSS //
-// components //
-// 1. account_ //
-    // 1.1 collection_ //
-        // 1.1.1 CollectionCard.js //
-    // 1.2 set_ //
-    // 1.3 user_ //
+@import './mLingo.scss';
+@import '../../../node_modules/bootstrap/scss/bootstrap.scss';
 
-// 1. account_ //
-    // 1.1 collection_ //
-        // 1.1.1 CollectionCard.js //
-        // 1.2.1 SetCard.js //
+
+
+
+//////////// Rebuild SCSS ////////////
+//////////// components ////////////
+// 1. account_
+// --- 1.1 collection_
+// --- --- 1.1.1 CollectionCard
+// --- --- 1.1.2 CollectionCreate
+// --- 1.2 set_
+// --- 1.3 user_
+
+// 1. account_
+// --- 1.1 collection_
+// --- --- 1.1.1 CollectionCard
+// --- --- 1.2.1 SetCard
 
 .card__container{
     width: 150px;
@@ -49,4 +56,15 @@
 .card__title{
     font-size: 1.2rem;
     font-weight: 900;
+}
+
+// --- --- 1.1.2 CollectionCreate
+.create__container, .create--collection{
+    @extend .flex--center;
+    flex-wrap: wrap;
+    padding: 1rem;
+}
+
+.create__details{
+    @extend .col-12;
 }
