--- a/mLingo/ClientApp/src/schema/styles/mLingo.scss
+++ b/mLingo/ClientApp/src/schema/styles/mLingo.scss
@@ -1,1 +1,7 @@
 // Mlingo design classes library //
+
+.flex--center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
