--- a/mLingo/ClientApp/src/styles/css/mLingo.css
+++ b/mLingo/ClientApp/src/styles/css/mLingo.css
@@ -1,1 +1,12 @@
-/* No CSS *//*# sourceMappingURL=mLingo.css.map */
+.flex--center {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+/*# sourceMappingURL=mLingo.css.map */
