--- a/mLingo/ClientApp/src/styles/css/mLingo.css
+++ b/mLingo/ClientApp/src/styles/css/mLingo.css
@@ -9,4 +9,13 @@
       -ms-flex-align: center;
           align-items: center;
 }
+
+.flex--between {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
 /*# sourceMappingURL=mLingo.css.map */
