--- a/mLingo/ClientApp/src/schema/styles/Main.scss
+++ b/mLingo/ClientApp/src/schema/styles/Main.scss
@@ -115,37 +115,8 @@
 }
 
 //////////////////////////////////////////////////////
-/* 1.4 UserCreateCollection.js */
+/* 1.4 [xxxxx] */
 //////////////////////////////////////////////////////
-
-.createCollection{
-
-  .flashsquare{
-    transform: scale(0.8);
-  }
-
-  button{
-    margin: 0 10px 0 0 ;
-  }
-
-  h5{
-    color: $dark-blue;
-    font-size: 14px;
-  }
-
-  & {
-    input[type=text], textarea[name=collectionDescription]{
-      font-size: 14px;
-      margin-bottom: 10px;
-      border-radius: 5px;
-      padding: 5px;
-      border: 1px solid $dark-blue;
-      border: 1px solid #B2B2B2;
-      border-radius: 10px;
-    }
-  }
-
-}
 
 //////////////////////////////////////////////////////
 /* Form Components */
