--- a/mLingo/ClientApp/src/schema/styles/mLingo.scss
+++ b/mLingo/ClientApp/src/schema/styles/mLingo.scss
@@ -5,3 +5,8 @@
     justify-content: center;
     align-items: center;
 }
+
+.flex--between{
+    display: flex;
+    justify-content: space-between;
+}
