--- a/mLingo/ClientApp/src/styles/css/BEM.css
+++ b/mLingo/ClientApp/src/styles/css/BEM.css
@@ -174,7 +174,7 @@ input[type='text']:hover, input[type='text']:focus, input[type='text']:active, i
           transform: scale(0.99);
 }
 
-.flex--center, .create__container, .create--collection {
+.flex--center, .create__details {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -184,6 +184,15 @@ input[type='text']:hover, input[type='text']:focus, input[type='text']:active, i
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.flex--between, .details__buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 /*!
@@ -662,7 +671,7 @@ mark,
   content: "\2014\00A0";
 }
 
-.img-fluid {
+.img-fluid, .details__img {
   max-width: 100%;
   height: auto;
 }
@@ -817,7 +826,7 @@ pre code {
 }
 
 .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .create__details, .col,
-.col-auto, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm,
+.col-auto, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .create__container, .create--collection, .col-sm,
 .col-sm-auto, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-md,
 .col-md-auto, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg,
 .col-lg-auto, .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl,
@@ -1223,7 +1232,7 @@ pre code {
             flex: 0 0 91.66667%;
     max-width: 91.66667%;
   }
-  .col-sm-12 {
+  .col-sm-12, .create__container, .create--collection {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 100%;
             flex: 0 0 100%;
@@ -10952,6 +10961,13 @@ a.text-dark:hover, a.text-dark:focus {
   }
 }
 
+#all__containers__in__user__section {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 79%;
+          flex: 0 0 79%;
+  max-width: 79%;
+}
+
 .card__container {
   width: 150px;
   height: 150px;
@@ -11006,8 +11022,34 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .create__container, .create--collection {
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
   padding: 1rem;
+}
+
+@media (min-width: 991px) {
+  .create__container, .create--collection {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 79%;
+            flex: 0 0 79%;
+    max-width: 79%;
+  }
+}
+
+.details__body {
+  margin: auto;
+}
+
+.details__description {
+  font-size: 14px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  padding: 5px;
+  border: 1px solid #000536;
+  border: 1px solid #B2B2B2;
+  border-radius: 10px;
+}
+
+.details__title {
+  color: #000536;
+  font-size: 14px;
 }
 /*# sourceMappingURL=BEM.css.map */
